--- a/manifest-files/manifest-dev.yml
+++ b/manifest-files/manifest-dev.yml
@@ -7,4 +7,4 @@ applications:
     buildpacks:
       - staticfile_buildpack
     routes:
-      - route: jom-sso.springernature.app
+      - route: jom-sso-dev.springernature.app
